src/test/ui/proc-macro/global-mut-state.stderr
error: mutable global state in a proc-macro
  --> $DIR/global-mut-state.rs:10:1
   |
LL | static mut FOO: u8 = 0;
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: mutable global state in a proc-macro
  --> $DIR/global-mut-state.rs:13:1
   |
LL | static BAR: AtomicBool = AtomicBool::new(false);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: mutable global state in a proc-macro
  --> $DIR/global-mut-state.rs:16:1
   |
LL | thread_local!(static BAZ: Cell<String> = Cell::new(String::new()));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 3 previous errors

